@@ -5,6 +5,13 @@
 
 #include <libpq-fe.h>
 
+#define SELECT_TABLE_STATS \
+		"SELECT relname, seq_scan, seq_tup_read, idx_scan, idx_tup_fetch, " \
+		"       n_tup_ins, n_tup_upd, n_tup_del\n" \
+		"FROM pg_stat_user_tables\n" \
+		"ORDER BY relname"
+
 PGconn *connect_to_db(char *);
+void pg_display_table_stats(char *);
 
 #endif /* _PG_H_ */
